--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
           type="image/png"
           sizes="32x32"
           href="./dist/images/favicon-32x32.png">
+    <link rel="preconnect"
+          href="https://fonts.googleapis.com">
+    <link rel="preconnect"
+          href="https://fonts.gstatic.com"
+          crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet"
+          href="./dist/css/main.min.css">
 
     <title>Frontend Mentor | Easybank landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
 <body>
