--- a/index.html
+++ b/index.html
@@ -25,82 +25,251 @@
 
 <body>
 
-    Home
-    About
-    Contact
-    Blog
-    Careers
+    <header class="primary-header">
+        <nav aria-label="primary"
+             class="navigation">
+            <a aria-label="Home page"
+               href="#">
+                <img src="./dist/images/logo.svg"
+                     alt="">
+            </a>
 
-    Request Invite
+            <button aria-expanded="false"
+                    aria-controls="primary-nav"
+                    class="toggle-btn">
+                <img src="./dist/images/icon-hamburger.svg"
+                     alt=""
+                     class="toggle-btn__icon-hamburger">
+                <img src="./dist/images/icon-close.svg"
+                     alt=""
+                     class="toggle-btn__icon-close">
+            </button>
 
+            <div id="primary-nav"
+                 class="navigation__nav">
+                <ul class="navigation__nav-links">
+                    <li class="navigation__nav-link"><a href="#">Home</a></li>
+                    <li class="navigation__nav-link"><a href="#">About</a></li>
+                    <li class="navigation__nav-link"><a href="#">Contact</a></li>
+                    <li class="navigation__nav-link"><a href="#">Blog</a></li>
+                    <li class="navigation__nav-link"><a href="#">Careers</a></li>
+                </ul>
+            </div>
 
+            <a href="#"
+               class="button">Request Invite</a>
+        </nav>
 
-    Next generation digital banking
+        <div class="primary-header__body">
+            <div class="primary-header__image-container">
+                <img src="./dist/images/image-mockups.png"
+                     alt="Illustration previewing easybank application.">
+            </div>
 
-    Take your financial life online. Your Easybank account will be a one-stop-shop
-    for spending, saving, budgeting, investing, and much more.
+            <div class="primary-header__content | flow">
+                <h1 class="primary-header__primary-heading">Next generation digital banking</h1>
+                <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+                    for spending, saving, budgeting, investing, and much more.</p>
+                <a href="#"
+                   class="button">Request Invite</a>
+            </div>
+        </div>
+    </header>
 
-    Request Invite
+    <main>
+        <section class="reasons | bg-neutral-300">
+            <div class="container">
+                <header class="section-header | flow">
+                    <h2 class="section-heading">Why choose Easybank?</h2>
+                    <p>We leverage Open Banking to turn your bank account into your financial hub. Control
+                        your finances like never before.</p>
+                </header>
 
+                <ul class="reasons__cards | even-columns">
+                    <li>
+                        <article class="card">
+                            <img src="./dist/images/icon-online.svg"
+                                 alt="">
+                            <h3 class="card__heading">Online Banking</h3>
+                            <p>Our modern web and mobile applications allow you to keep track of your
+                                finances
+                                wherever you are in the world.</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="card">
+                            <img src="./dist/images/icon-budgeting.svg"
+                                 alt="">
+                            <h3 class="card__heading">Simple Budgeting</h3>
+                            <p>See exactly where your money goes each month. Receive notifications
+                                when you’re
+                                close to hitting your limits.</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="card">
+                            <img src="./dist/images/icon-onboarding.svg"
+                                 alt="">
+                            <h3 class="card__heading">Fast Onboarding</h3>
+                            <p>We don’t do branches. Open your account in minutes online and start
+                                taking control
+                                of your finances right away.</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="card">
+                            <img src="./dist/images/icon-api.svg"
+                                 alt="">
+                            <h3 class="card__heading">Open API</h3>
+                            <p>Manage your savings, investments, pension, and much more from one
+                                account. Tracking
+                                your money has never been easier.</p>
+                        </article>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
+        <section class="articles">
+            <div class="container">
+                <header class="section-header">
+                    <h2 class="section-heading">Latest Articles</h2>
+                </header>
 
-    Why choose Easybank?
+                <ul class="articles__articles | even-columns">
+                    <li>
+                        <article class="article">
+                            <img src="./dist/images/image-currency.jpg"
+                                 alt="Image of different paper currencies."
+                                 class="articles__image">
+                            <header class="flow">
+                                <p class="article__author">By Claire Robinson</p>
+                                <h3 class="article__heading"><a href="#">Receive money in any currency with no fees</a>
+                                </h3>
+                                <p>The world is getting smaller and we’re becoming more mobile. So why should you be
+                                    forced to only receive money in a single …</p>
+                            </header>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="article">
+                            <img src="./dist/images/image-restaurant.jpg"
+                                 alt="Image of table in restaurant."
+                                 class="articles__image">
+                            <header class="flow">
+                                <p class="article__author">By Wilson Hutton</p>
+                                <h3 class="article__heading"><a href="#">Treat yourself without worrying about money</a>
+                                </h3>
+                                <p>Our simple budgeting feature allows you to separate out your spending and set
+                                    realistic limits each month. That means you …</p>
+                            </header>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="article">
+                            <img src="./dist/images/image-plane.jpg"
+                                 alt="Image of airplane wing above clouds with bright sun in the distant."
+                                 class="articles__image">
+                            <header class="flow">
+                                <p class="article__author">By Wilson Hutton</p>
+                                <h3 class="article__heading"><a href="#">Take your Easybank card wherever you go</a>
+                                </h3>
+                                <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+                                    while you’re abroad. We’ll even show you …</p>
+                            </header>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="article">
+                            <img src="./dist/images/image-confetti.jpg"
+                                 alt="Image of colorful confetti."
+                                 class="articles__image">
+                            <header class="flow">
+                                <p class="article__author">By Claire Robinson</p>
+                                <h3 class="article__heading"><a href="#">Our invite-only Beta accounts are now live!</a>
+                                </h3>
+                                <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+                                    It’s easy to request an invite through the site ...</p>
+                            </header>
+                        </article>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
-    We leverage Open Banking to turn your bank account into your financial hub. Control
-    your finances like never before.
+    <footer class="footer | bg-primary-700 text-neutral-100">
+        <div class="container">
+            <div class="footer__social">
+                <a href="#">
+                    <img src="./dist/images/logo.svg"
+                         alt="">
+                </a>
 
-    Online Banking
-    Our modern web and mobile applications allow you to keep track of your finances
-    wherever you are in the world.
+                <ul class="social-links">
+                    <li>
+                        <a href="#"
+                           class="social-links__link">
+                            <img src="./dist/images/icon-facebook.svg"
+                                 alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"
+                           class="social-links__link">
+                            <img src="./dist/images/icon-youtube.svg"
+                                 alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"
+                           class="social-links__link">
+                            <img src="./dist/images/icon-twitter.svg"
+                                 alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"
+                           class="social-links__link">
+                            <img src="./dist/images/icon-pinterest.svg"
+                                 alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"
+                           class="social-links__link">
+                            <img src="./dist/images/icon-instagram.svg"
+                                 alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
-    Simple Budgeting
-    See exactly where your money goes each month. Receive notifications when you’re
-    close to hitting your limits.
+            <nav aria-label="footer"
+                 class="footer__navigation">
+                <ul class="footer__nav-links">
+                    <li><a href="#"
+                           class="link">About Us</a></li>
+                    <li><a href="#"
+                           class="link">Contact</a></li>
+                    <li><a href="#"
+                           class="link">Blog</a></li>
+                    <li><a href="#"
+                           class="link">Careers</a></li>
+                    <li><a href="#"
+                           class="link">Support</a></li>
+                    <li><a href="#"
+                           class="link">Privacy Policy</a></li>
+                </ul>
+            </nav>
 
-    Fast Onboarding
-    We don’t do branches. Open your account in minutes online and start taking control
-    of your finances right away.
-
-    Open API
-    Manage your savings, investments, pension, and much more from one account. Tracking
-    your money has never been easier.
-
-
-
-    Latest Articles
-
-    By Claire Robinson
-    Receive money in any currency with no fees
-    The world is getting smaller and we’re becoming more mobile. So why should you be
-    forced to only receive money in a single …
-
-    By Wilson Hutton
-    Treat yourself without worrying about money
-    Our simple budgeting feature allows you to separate out your spending and set
-    realistic limits each month. That means you …
-
-    By Wilson Hutton
-    Take your Easybank card wherever you go
-    We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-    while you’re abroad. We’ll even show you …
-
-    By Claire Robinson
-    Our invite-only Beta accounts are now live!
-    After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-    It’s easy to request an invite through the site ...
-
-
-
-    About Us
-    Contact
-    Blog
-    Careers
-    Support
-    Privacy Policy
-
-    Request Invite
-
-    © Easybank. All Rights Reserved
+            <div>
+                <a href="#"
+                   class="button">Request Invite</a>
+                <p class="footer__copyright">&copy; Easybank. All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
