Basic header styling

--- a/index.html
+++ b/index.html
@@ -69,18 +69,21 @@
             </div>
         </nav>
 
-        <div class="primary-header__body">
-            <div class="primary-header__image-container">
-                <img src="./dist/images/image-mockups.png"
-                     alt="Illustration previewing easybank application.">
-            </div>
+        <div class="container">
+            <div class="primary-header__body">
+                <div class="primary-header__content | flow">
+                    <h1 class="primary-header__primary-heading">Next generation digital banking</h1>
+                    <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+                        for spending, saving, budgeting, investing, and much more.</p>
+                    <a href="#"
+                       class="button">Request Invite</a>
+                </div>
 
-            <div class="primary-header__content | flow">
-                <h1 class="primary-header__primary-heading">Next generation digital banking</h1>
-                <p>Take your financial life online. Your Easybank account will be a one-stop-shop
-                    for spending, saving, budgeting, investing, and much more.</p>
-                <a href="#"
-                   class="button">Request Invite</a>
+                <div class="primary-header__image-container">
+                    <img src="./dist/images/image-mockups.png"
+                         alt="Illustration previewing easybank application."
+                         class="primary-header__image">
+                </div>
             </div>
         </div>
     </header>
