--- a/index.html
+++ b/index.html
@@ -89,24 +89,28 @@
     </header>
 
     <main>
-        <section class="reasons | bg-neutral-300">
+        <section aria-labelledby="reasons-heading"
+                 class="padding-block-800 bg-neutral-300">
             <div class="container">
-                <header class="section-header | flow">
-                    <h2 class="section-heading">Why choose Easybank?</h2>
+                <header class="section-header | flow"
+                        style="--flow-spacer: 1.5em">
+                    <h2 id="reasons-heading"
+                        class="section-heading">Why choose Easybank?</h2>
                     <p>We leverage Open Banking to turn your bank account into your financial hub. Control
                         your finances like never before.</p>
                 </header>
 
-                <ul class="reasons__cards | even-columns">
+                <ul class="even-columns"">
                     <li>
-                        <article class="card">
-                            <img src="./dist/images/icon-online.svg"
-                                 alt="">
-                            <h3 class="card__heading">Online Banking</h3>
-                            <p>Our modern web and mobile applications allow you to keep track of your
-                                finances
-                                wherever you are in the world.</p>
-                        </article>
+                        <article class="
+                    card">
+                    <img src="./dist/images/icon-online.svg"
+                         alt="">
+                    <h3 class="card__heading">Online Banking</h3>
+                    <p>Our modern web and mobile applications allow you to keep track of your
+                        finances
+                        wherever you are in the world.</p>
+                    </article>
                     </li>
                     <li>
                         <article class="card">
@@ -142,10 +146,12 @@
             </div>
         </section>
 
-        <section class="articles">
+        <section aria-labelledby="articles-heading"
+                 class="articles | padding-block-800">
             <div class="container">
                 <header class="section-header">
-                    <h2 class="section-heading">Latest Articles</h2>
+                    <h2 id="articles-heading"
+                        class="section-heading">Latest Articles</h2>
                 </header>
 
                 <ul class="articles__articles | even-columns">
