--- a/index.html
+++ b/index.html
@@ -147,22 +147,23 @@
         </section>
 
         <section aria-labelledby="articles-heading"
-                 class="articles | padding-block-800">
+                 class="padding-block-800">
             <div class="container">
                 <header class="section-header">
                     <h2 id="articles-heading"
                         class="section-heading">Latest Articles</h2>
                 </header>
 
-                <ul class="articles__articles | even-columns">
+                <ul class="even-columns">
                     <li>
                         <article class="article">
                             <img src="./dist/images/image-currency.jpg"
                                  alt="Image of different paper currencies."
-                                 class="articles__image">
+                                 class="article__image">
                             <header class="flow">
                                 <p class="article__author">By Claire Robinson</p>
-                                <h3 class="article__heading"><a href="#">Receive money in any currency with no fees</a>
+                                <h3 class="article__heading"><a href="#"
+                                       class="link">Receive money in any currency with no fees</a>
                                 </h3>
                                 <p>The world is getting smaller and we’re becoming more mobile. So why should you be
                                     forced to only receive money in a single …</p>
@@ -173,10 +174,11 @@
                         <article class="article">
                             <img src="./dist/images/image-restaurant.jpg"
                                  alt="Image of table in restaurant."
-                                 class="articles__image">
+                                 class="article__image">
                             <header class="flow">
                                 <p class="article__author">By Wilson Hutton</p>
-                                <h3 class="article__heading"><a href="#">Treat yourself without worrying about money</a>
+                                <h3 class="article__heading"><a href="#"
+                                       class="link">Treat yourself without worrying about money</a>
                                 </h3>
                                 <p>Our simple budgeting feature allows you to separate out your spending and set
                                     realistic limits each month. That means you …</p>
@@ -187,10 +189,11 @@
                         <article class="article">
                             <img src="./dist/images/image-plane.jpg"
                                  alt="Image of airplane wing above clouds with bright sun in the distant."
-                                 class="articles__image">
+                                 class="article__image">
                             <header class="flow">
                                 <p class="article__author">By Wilson Hutton</p>
-                                <h3 class="article__heading"><a href="#">Take your Easybank card wherever you go</a>
+                                <h3 class="article__heading"><a href="#"
+                                       class="link">Take your Easybank card wherever you go</a>
                                 </h3>
                                 <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
                                     while you’re abroad. We’ll even show you …</p>
@@ -201,10 +204,11 @@
                         <article class="article">
                             <img src="./dist/images/image-confetti.jpg"
                                  alt="Image of colorful confetti."
-                                 class="articles__image">
+                                 class="article__image">
                             <header class="flow">
                                 <p class="article__author">By Claire Robinson</p>
-                                <h3 class="article__heading"><a href="#">Our invite-only Beta accounts are now live!</a>
+                                <h3 class="article__heading"><a href="#"
+                                       class="link">Our invite-only Beta accounts are now live!</a>
                                 </h3>
                                 <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
                                     It’s easy to request an invite through the site ...</p>
