Header background and nav shadow

--- a/index.html
+++ b/index.html
@@ -100,17 +100,16 @@
                         your finances like never before.</p>
                 </header>
 
-                <ul class="even-columns"">
+                <ul class="even-columns">
                     <li>
-                        <article class="
-                    card">
-                    <img src="./dist/images/icon-online.svg"
-                         alt="">
-                    <h3 class="card__heading">Online Banking</h3>
-                    <p>Our modern web and mobile applications allow you to keep track of your
-                        finances
-                        wherever you are in the world.</p>
-                    </article>
+                        <article class="card">
+                            <img src="./dist/images/icon-online.svg"
+                                 alt="">
+                            <h3 class="card__heading">Online Banking</h3>
+                            <p>Our modern web and mobile applications allow you to keep track of your
+                                finances
+                                wherever you are in the world.</p>
+                        </article>
                     </li>
                     <li>
                         <article class="card">
