--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a aria-label="Home page"
                        href="#">
                         <img src="./dist/images/logo.svg"
-                             alt="">
+                             alt="easybank">
                     </a>
 
                     <button aria-expanded="false"
@@ -226,7 +226,7 @@
                     <a aria-label="Home page"
                        href="#">
                         <img src="./dist/images/logo-light.svg"
-                             alt="">
+                             alt="easybank">
                     </a>
 
                     <ul class="social-links | flex">
